# yew_chart_js

./: Cargo.toml  README.md
examples/easy/: Cargo.toml
examples/easy/src/: main.rs
src/: chart_js.rs  easy.rs  lib.rs
yew_chart_js_example/: Cargo.toml  index.html
yew_chart_js_example/src/: main.rs
