[package]
name = "yew_chart_js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.89"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlCanvasElement"] }
yew = "0.20.0"
